# Lakehouse-on-Databricks-with-Unity-Catalog-and-Delta-Live-Tables

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci_cd_pipeline.yml
dabs/: databricks.yml
notebooks/: nightly_optimization.sql  run_dynamic_pipeline.py  security_grants.sql  sys_observability.sql
orchestration/: airflow_dag.py
scripts/: data_generator.py  generate_history.py
src/dbt_lakehouse/: dbt_project.yml  profiles.yml
src/dbt_lakehouse/models/: schema.yml
src/dbt_lakehouse/models/gold/: dim_customers.sql  dim_products.sql  fct_orders.sql
src/dlt_engine/: __init__.py  config_loader.py  pipeline_builder.py
src/dlt_engine/metadata/: pipelines.yaml
terraform/: active_active.tf  delta_sharing.tf  federation.tf  main.tf  providers.tf  unity_catalog.tf
tests/: test_engine.py
