[tool.poetry]
name = "enterprise_lakehouse"
version = "2.4.0"
description = "Enterprise-Grade Metadata-Driven Lakehouse Platform on Databricks"
authors = ["Parth <parth@enterprise.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
pyyaml = "^6.0.1"
pyspark = "3.5.0"
delta-spark = "3.1.0"
pandas = "^2.2.0"
cryptography = "^42.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "delta.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dlt.*"
ignore_missing_imports = true
